# wasm-as-html

./: .gitignore  Cargo.toml  Readme.md  compile.sh
examples/wasi/: .gitignore  Readme.md
examples/wasi/plotters-normal-2d/: Cargo.toml
examples/wasi/plotters-normal-2d/src/: main.rs
examples/yew/: Readme.md  todomvc.html
lib/html_and_tar/: Cargo.toml
lib/html_and_tar/src/: lib.rs
scene-viewer/: scene-viewer.js  stealth-paint-editor.js
src/: main.rs  stage0-html.html  stage0.html  stage1-edit.js  stage1.js
stage3/unzip/: Cargo.toml
stage3/unzip/src/: boot.mjs  main.rs
wasi-loader/: Cargo.toml  Readme.md  build.js  config.toml  interpret.js  package-lock.json  package.json  stage2-wasi.js
wasi-loader/interpret/: Cargo.toml  Readme.md  interpret.js
wasi-loader/interpret/src/: config.rs  lib.rs  main.rs
wasi-loader/src/: lib.rs
wasi-loader/unzip/: Cargo.toml
wasi-loader/unzip/src/: main.rs
