[package]
name = "wasm-as-html"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-encoder = "0.20"
wasmparser = "0.95"
[dependencies.clap]
version = "4"
features = ["derive"]

[workspace]
members = [
  ".",
  "wasi-loader/interpret",
  "stage3/unzip",

  # Application for stage3/unzip
  "examples/wasi/plotters-normal-2d",
]

[profile.release]
opt-level = 's'
strip = true
