[package]
name = "wasm-as-html"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-encoder = "0.20"
wasmparser = "0.95"
[dependencies.clap]
version = "4"
features = ["derive"]
[dependencies.base64]
version = "0.21.4"
default-features = false
features = ["alloc"]

[workspace]
members = [
  ".",
  "wasi-loader/interpret",
  "stage3/unzip",

  # Application for stage3/unzip
  "examples/wasi/plotters-normal-2d",
]

[profile.release]
opt-level = 's'
strip = true
